# sensors_miscdevice

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  miscdevice.gni  miscdevice_vibrator_custom.gni  ohos.build
frameworks/cj/: BUILD.gn
frameworks/cj/src/: vibrator_ffi.cpp  vibrator_ffi.h
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/vibrator/ets/: @ohos.vibrator.ets
frameworks/js/ani/vibrator/include/: ani_utils.h
frameworks/js/ani/vibrator/src/: vibrator_ani.cpp
frameworks/native/miscdevice/: BUILD.gn
frameworks/native/miscdevice/include/: i_miscdevice_service.h  light_client.h  light_service_client.h  miscdevice_service_proxy.h  miscdevice_trace.h  sensors_ipc_interface_code.h  vibrator_service_client.h
frameworks/native/miscdevice/src/: light_client.cpp  light_service_client.cpp  miscdevice_service_proxy.cpp  vibrator_service_client.cpp
frameworks/native/miscdevice/test/: BUILD.gn
frameworks/native/miscdevice/test/unittest/common/: BUILD.gn  (+2 more)
frameworks/native/vibrator/: BUILD.gn  vibrator_agent.cpp
frameworks/native/vibrator/all/: IMiscdeviceService.idl
frameworks/native/vibrator/include/: i_vibrator_client.h  vibrator_client_proxy.h  vibrator_client_stub.h  vibrator_service_client.h
frameworks/native/vibrator/part/: IMiscdeviceService.idl
frameworks/native/vibrator/src/: vibrator_client_stub.cpp  vibrator_service_client.cpp
interfaces/native/light/test/: BUILD.gn
interfaces/native/light/test/unittest/: light_agent_test.cpp
interfaces/native/vibrator/: BUILD.gn
interfaces/native/vibrator/include/: vibrator_agent.h  vibrator_agent_type.h
interfaces/native/vibrator/src/: vibrator_agent.cpp
interfaces/native/vibrator/test/: BUILD.gn
interfaces/native/vibrator/test/fuzztest/: BUILD.gn
interfaces/native/vibrator/test/unittest/: vibrator_agent_native_test.cpp  vibrator_agent_test.cpp
services/miscdevice_service/: BUILD.gn
services/miscdevice_service/custom_vibrate_decode/include/: custom_vibration_matcher.h  default_vibrator_decoder.h  default_vibrator_decoder_factory.h  vibrator_decoder.h  vibrator_decoder_factory.h
services/miscdevice_service/custom_vibrate_decode/src/: custom_vibration_matcher.cpp  default_vibrator_decoder.cpp  default_vibrator_decoder_factory.cpp
services/miscdevice_service/haptic_matcher/include/: custom_vibration_matcher.h
services/miscdevice_service/haptic_matcher/src/: custom_vibration_matcher.cpp
services/miscdevice_service/hdi_connection/adapter/include/: compatible_connection.h  compatible_light_connection.h  hdi_connection.h  hdi_light_connection.h  vibrator_plug_callback.h
services/miscdevice_service/hdi_connection/adapter/src/: compatible_connection.cpp  compatible_light_connection.cpp  hdi_connection.cpp  hdi_light_connection.cpp  vibrator_plug_callback.cpp
services/miscdevice_service/hdi_connection/adpter/include/: compatible_connection.h  hdi_connection.h  hdi_direct_connection.h
services/miscdevice_service/hdi_connection/adpter/src/: compatible_connection.cpp  hdi_connection.cpp  hdi_direct_connection.cpp
services/miscdevice_service/hdi_connection/interface/include/: i_light_hdi_connection.h  i_vibrator_hdi_connection.h  light_hdi_connection.h  vibrator_hdi_connection.h  vibrator_hdi_type.h
services/miscdevice_service/hdi_connection/interface/src/: light_hdi_connection.cpp  vibrator_hdi_connection.cpp
services/miscdevice_service/include/: custom_vibration_matcher.h  miscdevice_common_event_subscriber.h  miscdevice_dump.h  miscdevice_observer.h  miscdevice_ringer_mode_callback.h  miscdevice_service.h  miscdevice_service_impl.h  miscdevice_service_stub.h  vibration_priority_manager.h  vibrator_infos.h  vibrator_thread.h
services/miscdevice_service/src/: custom_vibration_matcher.cpp  miscdevice_common_event_subscriber.cpp  miscdevice_dump.cpp  miscdevice_observer.cpp  miscdevice_ringer_mode_callback.cpp  miscdevice_service.cpp  miscdevice_service_impl.cpp  miscdevice_service_stub.cpp  vibration_priority_manager.cpp  vibrator_thread.cpp
services/miscdevice_service/test/: BUILD.gn
services/miscdevice_service/test/fuzztest/: BUILD.gn
services/miscdevice_service/test/fuzztest/getlightliststub_fuzzer/: BUILD.gn  getlightliststub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/issupporteffectstub_fuzzer/: BUILD.gn  issupporteffectstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/playvibratorcustomstub_fuzzer/: BUILD.gn  playvibratorcustomstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/playvibratoreffectstub_fuzzer/: BUILD.gn  playvibratoreffectstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/stopvibratorallstub_fuzzer/: BUILD.gn  stopvibratorallstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/stopvibratorbymodestub_fuzzer/: BUILD.gn  stopvibratorbymodestub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/turnoffstub_fuzzer/: BUILD.gn  turnoffstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/turnonstub_fuzzer/: BUILD.gn  turnonstub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/vibratestub_fuzzer/: BUILD.gn  vibratestub_fuzzer.cpp
services/miscdevice_service/test/fuzztest/vibratoronremoterequest_fuzzer/: BUILD.gn  vibratoronremoterequest_fuzzer.cpp  vibratoronremoterequest_fuzzer.h
services/miscdevice_service/test/unittest/common/: BUILD.gn  miscdevice_service_test.cpp
services/miscdevice_service/test/unittest/phone/: BUILD.gn  miscdevice_service_test.cpp
test/fuzztest/vibrator/handlevibratordata_fuzzer/: BUILD.gn  handlevibratordata_fuzzer.cpp  handlevibratordata_fuzzer.h
test/unittest/vibrator/native/: BUILD.gn  vibration_priority_manager_test.cpp  vibrator_agent_modulation_test.cpp  vibrator_agent_seek_test.cpp  vibrator_agent_test.cpp  vibrator_service_test.cpp
test/unittest/vibrator/native/resource/: ohos_test.xml
tools/ohos-vibratorControl/: BUILD.gn  ohos-vibratorControl.json  ohos-vibratorControl_report.md
tools/ohos-vibratorControl/docs/: README.md
tools/ohos-vibratorControl/src/: main.cpp
tools/ohos-vibratorControl/tests/: TEST.md
(+346 files in other folders)
