# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/sensors"
ohos_shared_library("libmiscdevice_service") {
  sources = [
    "src/miscdevice_service.cpp",
    "src/miscdevice_service_impl.cpp",
    "src/miscdevice_service_stub.cpp",
  ]

  include_dirs = [
    "include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "$SUBSYSTEM_DIR/miscdevice/frameworks/native/miscdevice/include",
    "$SUBSYSTEM_DIR/miscdevice/utils/include",
    "//drivers/peripheral/misc/vibrator/interfaces/include",
  ]

  cflags = [ "-Wno-error=inconsistent-missing-override" ]
  deps = [
    "$SUBSYSTEM_DIR/miscdevice/utils:libmiscdevice_utils",
    "//drivers/peripheral/misc/vibrator/hal:hdi_vibrator",
    "//utils/native/base:utils",
  ]

  external_deps = [
    #"appexecfwk:appexecfwk_base",
    #"appexecfwk:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",

    #"intent:base",
    #"intent:intent",
    "ipc:ipc_core",

    #"communication_L2:ipc_core",
    #"permission:permission_sdk_cxx",
    "permission_standard:libpermissionsdk_standard",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  part_name = "sensors_miscdevice"
  subsystem_name = "sensors"
}

group("miscdevice_service_target") {
  deps = [ ":libmiscdevice_service" ]
}
