# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../miscdevice.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-vibratorControl") {
  branch_protector_ret = "pac_ret"
  cli_config_file = "ohos-vibratorControl.json"

  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "src",
    "//base/sensors/miscdevice/interfaces/inner_api/vibrator"
  ]

  deps = [
    "//base/sensors/miscdevice/frameworks/native/vibrator:vibrator_interface_native",
  ]

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"

  cflags = [
    "-fPIC",
    "-g",
  ]
  cflags += [ "-Wall" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags_cc = cflags

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  external_deps = [
    "cJSON:cjson"
  ]
  subsystem_name = "sensors"
  part_name = "miscdevice"
}