# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("./../../../miscdevice.gni")

ohos_shared_library("vibrator_ani") {
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "$SUBSYSTEM_DIR/frameworks/js/ani/vibrator/src/vibrator_ani.cpp" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/js/ani/vibrator/include",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]
  deps = [
    "$SUBSYSTEM_DIR/frameworks/native/vibrator:vibrator_interface_native",
    "$SUBSYSTEM_DIR/utils/common:libmiscdevice_utils",
  ]
  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
  ]
  subsystem_name = "sensors"
  part_name = "miscdevice"
  output_extension = "so"
}

generate_static_abc("vibrator_abc") {
  base_url = "./vibrator/ets"
  files = [ "./vibrator/ets/@ohos.vibrator.ets" ]
  dst_file = "$target_out_dir/vibrator.abc"
  out_puts = [ "$target_out_dir/vibrator.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/vibrator.abc"
}

ohos_prebuilt_etc("vibrator_abc_etc") {
  source = "$target_out_dir/vibrator.abc"
  module_install_dir = "framework"
  subsystem_name = "sensors"
  part_name = "miscdevice"
  deps = [ ":vibrator_abc" ]
}

group("vibrator_ani_target") {
  deps = [
    ":vibrator_abc_etc",
    ":vibrator_ani",
  ]
}
