# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../../miscdevice.gni")

ohos_shared_library("liblight_native") {
  sources = [
    "src/light_client.cpp",
    "src/miscdevice_service_proxy.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/miscdevice/include",
    "$SUBSYSTEM_DIR/interfaces/native/light/include",
    "$SUBSYSTEM_DIR/utils/include",
  ]

  cflags = [ "-fstack-protector-all" ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/native/light:light_ndk_header",
    "$SUBSYSTEM_DIR/utils:libmiscdevice_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = miscdevice_default_defines

  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "miscdevice"
  subsystem_name = "sensors"
}

ohos_shared_library("libvibrator_native") {
  sources = [
    "src/miscdevice_service_proxy.cpp",
    "src/vibrator_service_client.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/miscdevice/include",
    "$SUBSYSTEM_DIR/interfaces/native/light/include",
    "$SUBSYSTEM_DIR/utils/include",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = miscdevice_default_defines

  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "miscdevice"
  subsystem_name = "sensors"
}

group("miscdevice_native_target") {
  deps = [
    ":liblight_native",
    ":libvibrator_native",
  ]
}
