# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/sensors/miscdevice/miscdevice_vibrator_custom.gni")
import("//build/test.gni")

SUBSYSTEM_DIR = "//base/sensors"
module_output_path = "sensors/miscdevice/interfaces"

###########################VibratorAgentTest###########################
ohos_unittest("VibratorAgentTest") {
  module_out_path = module_output_path

  sources = [ "unittest/vibrator_agent_test.cpp" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "$SUBSYSTEM_DIR/miscdevice/utils/include",
    "$SUBSYSTEM_DIR/miscdevice/interfaces/native/vibrator/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/miscdevice/interfaces/native/vibrator:vibrator_target",
    "$SUBSYSTEM_DIR/miscdevice/utils:libmiscdevice_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
  ]

  if (miscdevice_feature_vibrator_custom) {
    resource_config_file = "$SUBSYSTEM_DIR/miscdevice/interfaces/native/vibrator/test/unittest/resource/ohos_test.xml"
  }
}

###########################end###########################
group("unittest") {
  testonly = true
  deps = [ ":VibratorAgentTest" ]
}
