# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("./../../../../miscdevice.gni")

ohos_fuzztest("HandleVibratorDataFuzzTest") {
  module_out_path = FUZZ_MODULE_OUT_PATH

  fuzz_config_file = "$SUBSYSTEM_DIR/test/fuzztest/vibrator/handlevibratordata_fuzzer"

  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/vibrator/include",
    "$SUBSYSTEM_DIR/test/fuzztest/vibrator/handlevibratordata_fuzzer",
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/utils/haptic_decoder/interface",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "handlevibratordata_fuzzer.cpp",
    "$SUBSYSTEM_DIR/frameworks/native/vibrator/src/vibrator_service_client.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native/light:light_ndk_header",
    "$SUBSYSTEM_DIR/frameworks/native/vibrator:libvibrator_native",
    "$SUBSYSTEM_DIR/frameworks/native/vibrator:miscdevice_service_proxy",
    "$SUBSYSTEM_DIR/frameworks/native/vibrator:vibrator_interface_native",
    "$SUBSYSTEM_DIR/utils/common:libmiscdevice_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "cJSON:cjson",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HandleVibratorDataFuzzTest",
  ]
}
