# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("./../../../../../miscdevice.gni")

ohos_fuzztest("StopVibratorAllStubFuzzTest") {
  module_out_path = FUZZ_MODULE_OUT_PATH

  fuzz_config_file = "$SUBSYSTEM_DIR/services/miscdevice_service/test/fuzztest/stopvibratorallstub_fuzzer"

  include_dirs = [
    "//third_party/cJSON",
    "$SUBSYSTEM_DIR/interfaces/native/vibrator/include",
    "$SUBSYSTEM_DIR/frameworks/native/miscdevice/include",
    "$SUBSYSTEM_DIR/frameworks/native/light/include",
    "$SUBSYSTEM_DIR/services/miscdevice_service/include",
    "$SUBSYSTEM_DIR/services/miscdevice_service/hdi_connection/adapter/include",
    "$SUBSYSTEM_DIR/services/miscdevice_service/hdi_connection/interface/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/services/miscdevice_service/test/fuzztest/stopvibratorallstub_fuzzer",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "stopvibratorallstub_fuzzer.cpp" ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/native/light:light_interface_native",
    "$SUBSYSTEM_DIR/interfaces/native/vibrator:vibrator_interface_native",
    "$SUBSYSTEM_DIR/services/miscdevice_service:libmiscdevice_service_static",
    "$SUBSYSTEM_DIR/utils:libmiscdevice_utils",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_vibrator:libvibrator_proxy_1.1",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = miscdevice_default_defines

  if (hdf_drivers_interface_light) {
    external_deps += [ "drivers_interface_light:liblight_proxy_1.0" ]
  }
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":StopVibratorAllStubFuzzTest",
  ]
}
